# parsEO

./: .gitignore  .pre-commit-config.yaml  1.2  3.9  AGENTS.md  MANIFEST.in  README.html  README.md  naming_api.py  pyproject.toml  pyproject.toml.bak_20250818_205434  result.json  test_naming_api.py
.github/workflows/: ci.yml  python-package.yml
docs/: landsat_epsg_from_path_row.md
examples/schema_skeleton/: index.json  template_filename_v0_0_1.json
scripts/: build_landsat_epsg_lookup.py
src/filenamingapi/: __init__.py  cli.py  parser.py
src/filenamingapi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/filenamingapi/schemas/clms/: CLC_filename_structure.json
src/filenamingapi/schemas/landsat/: landsat4_filename_structure.json  landsat7_filename_structure.json  landsat8_filename_structure.json
src/filenamingapi/schemas/sentinel/: sentinel1_filename_structure_unified.json  sentinel3_filename_structure.json  sentinel4_filename_structure.json  sentinel5p_filename_structure.json
src/filenamingapi/tools/: generate_reduced_schemas.py
src/parseo/: __init__.py  _epsg_lookup.py  _field_mappings.py  _json.py  _tile_systems.py  assembler.py  cli.py  clms_catalog.py  parser.py  parser.py.bak_20250818_160059  schema_registry.py  stac_dataspace.py  stac_http.py  stac_scraper.py  template.py  validator.py
src/parseo/data/: __init__.py  landsat_epsg_lookup.json
src/parseo/schemas/: index.json
src/parseo/schemas/clms/: HRSI.json
src/parseo/schemas/clms/clc/: clc_filename_v1_0_0.json  fields.json  index.json
src/parseo/schemas/clms/hr-wsi/: cc_filename_structure.json  fsc_filename_structure.json  gfsc_filename_structure.json  icd_filename_structure.json  sp_comb_filename_structure.json  sp_s2_filename_structure.json  sws_filename_structure.json  wds_filename_structure.json  wic_comb_filename_structure.json  wic_s1_filename_structure.json  wic_s2_filename_structure.json
src/parseo/schemas/copernicus/clms/ccd/: ccd_filename_v1_0_0.json  index.json
src/parseo/schemas/copernicus/cz/: cz_filename_v0_0_0.json  index.json
src/parseo/schemas/copernicus/egms/: egms_gnss_filename_v1_0_0.json  egms_l2a_filename_v1_0_0.json  egms_l3_filename_v1_0_0.json
src/parseo/schemas/copernicus/rz/: index.json  rz_filename_v1_0_0.json
src/parseo/schemas/copernicus/sentinel/: s1_filename_v1_0_0.json  s2_filename_v1_0_0.json  s3_filename_v1_0_0.json  s4_filename_v1_0_0.json  s5p_filename_v1_0_0.json  s6_filename_v1_0_0.json
src/parseo/schemas/eumetsat/: metop_filename_v1_0_0.json  mtg_filename_v1_0_0.json
src/parseo/schemas/eumetsat/metop/: index.json  metop_filename_v1_0_0.json
src/parseo/schemas/eumetsat/mtg/: index.json  mtg_filename_v1_0_0.json
src/parseo/schemas/landsat/: fields.json  index.json  landsat5_filename_structure.json  landsat_filename_v1_0_0.json  landsat_sceneid_v1_0_0.json
src/parseo/schemas/nasa/: modis_filename_v1_0_0.json
src/parseo/schemas/nasa/modis/: index.json  modis_filename_v1_0_0.json
src/parseo/schemas/sentinel/s1/: fields.json  index.json  s1_filename_v1_0_0.json
src/parseo/schemas/sentinel/s2/: fields.json  index.json  s2_filename_v1_0_0.json
src/parseo/schemas/sentinel/s3/: fields.json  index.json  s3_filename_v1_0_0.json
src/parseo/schemas/sentinel/s4/: fields.json  index.json  s4_filename_v1_0_0.json
src/parseo/schemas/sentinel/s5p/: fields.json  index.json  s5p_filename_v1_0_0.json
src/parseo/schemas/sentinel/s6/: fields.json  index.json  s6_filename_v1_0_0.json
src/parseo/schemas/usgs/landsat/: fields.json  landsat_filename_v1_0_0.json
src/parseo/tools/: generate_schemas_from_clms.py
template/: template_filename_v0_0_1.json
tests/: conftest.py  test_assembler.py  test_assembler_cli.py  test_cli.py  test_clms_catalog.py  test_cz_schema.py  test_examples_roundtrip.py  test_hrwsi_negative.py  test_hrwsi_positive.py  test_init.py  test_parser.py  test_schema_examples_round_trip.py  test_schema_registry.py  test_stac_dataspace.py  test_stac_http.py  test_stac_scraper.py
(+145 files in other folders)
