[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parseo"
version = "0.2.0"
description = "Filename validation schemas and tools for CLMS products"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Matteo Mattiuzzi" }]
license = { file = "LICENSE" }
dependencies = [
  "jsonschema>=4.0.0",
]
classifiers = [
  "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
parseo = ["schemas/**/*.json"]

[project.scripts]
generate-clms-schemas = "parseo.tools.generate_schemas_from_clms:main"
